--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "c_user",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "xs",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "vpd",
@@ -77,34 +77,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "fr",
-        "value": "0ieTtmBM68dLw5dLu.AWdMQNGoDKfcbJZvWog307lCNMO1YrHx0DTlnIatBzqzkEBi7Zg.BoOuKK..AAA.0.0.BoO8Ln.AWe4B-815_LfEzOgGxHMeVLv4WQ",
+        "value": "0ieTtmBM68dLw5dLu.AWfyB7xyLQcRokawIM6sRS7LENX2baUeU4s14oLThahYUlKqs2M.BoOuKK..AAA.0.0.BoPA2B.AWd1U1jat_t3xvlKiakYfD_Go0g",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "fbl_st",
-        "value": "101620061%3BT%3A29145783",
+        "value": "101634074%3BT%3A29146101",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2834%3Btimestamp%3A1748746983",
+        "value": "v2%3Bclient_version%3A2834%3Btimestamp%3A1748766081",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T03:04:08.852Z",
-        "lastAccessed": "2025-06-01T03:04:08.852Z"
+        "creation": "2025-06-01T08:21:34.208Z",
+        "lastAccessed": "2025-06-01T08:21:34.208Z"
     }
 ]
