--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "c_user",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "xs",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "vpd",
@@ -77,34 +77,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "fr",
-        "value": "0ieTtmBM68dLw5dLu.AWcDh83B8uBT0tDz41FRnQ_-BJ6N4GwlGq740fDdrB5sGcUElM4.BoOuKK..AAA.0.0.BoPJLv.AWfDWH82ImEZZ_XHl2ypcvYS0a8",
+        "value": "0ieTtmBM68dLw5dLu.AWd3F1nIBDIIFxNH5Be_i4eS343x4WZxFIAljNfGfn23QAN4D1M.BoOuKK..AAA.0.0.BoPRFm.AWdlRlNki9XFIfUIva0Kdo15bUQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "fbl_st",
-        "value": "100436587%3BT%3A29146670",
+        "value": "100423878%3BT%3A29147210",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2834%3Btimestamp%3A1748800239",
+        "value": "v2%3Bclient_version%3A2834%3Btimestamp%3A1748832614",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-01T17:50:47.343Z",
-        "lastAccessed": "2025-06-01T17:50:47.343Z"
+        "creation": "2025-06-02T02:50:53.281Z",
+        "lastAccessed": "2025-06-02T02:50:53.281Z"
     }
 ]
