--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "c_user",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "xs",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "vpd",
@@ -77,34 +77,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "fr",
-        "value": "0ieTtmBM68dLw5dLu.AWd3F1nIBDIIFxNH5Be_i4eS343x4WZxFIAljNfGfn23QAN4D1M.BoOuKK..AAA.0.0.BoPRFm.AWdlRlNki9XFIfUIva0Kdo15bUQ",
+        "value": "0ieTtmBM68dLw5dLu.AWf1y7iujvwvYYY7R6G2lJAqmQcxIPjYqWKMI7LIt4hvHPqDKYg.BoOuKK..AAA.0.0.BoPYw1.AWe05TgWOsYuaQghXK7N-RRqjDE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "fbl_st",
-        "value": "100423878%3BT%3A29147210",
+        "value": "100421542%3BT%3A29147734",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2834%3Btimestamp%3A1748832614",
+        "value": "v2%3Bclient_version%3A2834%3Btimestamp%3A1748864053",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T02:50:53.281Z",
-        "lastAccessed": "2025-06-02T02:50:53.281Z"
+        "creation": "2025-06-02T11:34:32.753Z",
+        "lastAccessed": "2025-06-02T11:34:32.753Z"
     }
 ]
