--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "c_user",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "xs",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "vpd",
@@ -77,34 +77,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "fr",
-        "value": "0ieTtmBM68dLw5dLu.AWf1y7iujvwvYYY7R6G2lJAqmQcxIPjYqWKMI7LIt4hvHPqDKYg.BoOuKK..AAA.0.0.BoPYw1.AWe05TgWOsYuaQghXK7N-RRqjDE",
+        "value": "0ieTtmBM68dLw5dLu.AWc7XOCXqFUlaR73pntruLkg7YuJcxRDq2SV3nQsc40oA0wGCbs.BoOuKK..AAA.0.0.BoPm65.AWd4biRrlDT-kspq8sUvMCpaP5E",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "fbl_st",
-        "value": "100421542%3BT%3A29147734",
+        "value": "100623008%3BT%3A29148700",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2834%3Btimestamp%3A1748864053",
+        "value": "v2%3Bclient_version%3A2836%3Btimestamp%3A1748922041",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-02T11:34:32.753Z",
-        "lastAccessed": "2025-06-02T11:34:32.753Z"
+        "creation": "2025-06-03T03:41:18.538Z",
+        "lastAccessed": "2025-06-03T03:41:18.538Z"
     }
 ]
