--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.327Z",
+        "lastAccessed": "2025-06-05T07:24:00.327Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.327Z",
+        "lastAccessed": "2025-06-05T07:24:00.327Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.327Z",
+        "lastAccessed": "2025-06-05T07:24:00.327Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.327Z",
+        "lastAccessed": "2025-06-05T07:24:00.327Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.327Z",
+        "lastAccessed": "2025-06-05T07:24:00.327Z"
     },
     {
         "key": "c_user",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.328Z",
+        "lastAccessed": "2025-06-05T07:24:00.328Z"
     },
     {
         "key": "xs",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.328Z",
+        "lastAccessed": "2025-06-05T07:24:00.328Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.328Z",
+        "lastAccessed": "2025-06-05T07:24:00.328Z"
     },
     {
         "key": "vpd",
@@ -77,34 +77,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.328Z",
+        "lastAccessed": "2025-06-05T07:24:00.328Z"
     },
     {
         "key": "fr",
-        "value": "0ieTtmBM68dLw5dLu.AWc7XOCXqFUlaR73pntruLkg7YuJcxRDq2SV3nQsc40oA0wGCbs.BoOuKK..AAA.0.0.BoPm65.AWd4biRrlDT-kspq8sUvMCpaP5E",
+        "value": "0ieTtmBM68dLw5dLu.AWefrCzz5zYrw3ISVIfxFyDMIQ2BnxG0oftPQ2jmFGNsAzi_s4c.BoOuKK..AAA.0.0.BoQUXv.AWdv8aVVsA8hm4S31_gfn7RVemM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.328Z",
+        "lastAccessed": "2025-06-05T07:24:00.328Z"
     },
     {
         "key": "fbl_st",
-        "value": "100623008%3BT%3A29148700",
+        "value": "100627503%3BT%3A29151803",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.328Z",
+        "lastAccessed": "2025-06-05T07:24:00.328Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2836%3Btimestamp%3A1748922041",
+        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749108207",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-03T03:41:18.538Z",
-        "lastAccessed": "2025-06-03T03:41:18.538Z"
+        "creation": "2025-06-05T07:24:00.328Z",
+        "lastAccessed": "2025-06-05T07:24:00.328Z"
     }
 ]
