--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "c_user",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "xs",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "locale",
@@ -68,43 +68,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "fr",
-        "value": "0ieTtmBM68dLw5dLu.AWeJHeL_PNcjNR2qgyVcHeBoCNTQYXfM7pzJqa5RfNCnZzWDWXQ.BoOuKK..AAA.0.0.BoQaxf.AWdWdxCwe6c_Zl7xfa0Waas19uM",
+        "value": "0ieTtmBM68dLw5dLu.AWckOY4q6pu0WEvf6jNZfjJ1K-zeMe7iJ_hSWWMfaGaOrCqCEIM.BoOuKK..AAA.0.0.BoQkqH.AWfBo-C2XAsCOelvyYbJIWjAu6A",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "fbl_st",
-        "value": "101438979%3BT%3A29152240",
+        "value": "101321774%3BT%3A29152915",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749134431",
+        "value": "v2%3Bclient_version%3A2838%3Btimestamp%3A1749174919",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.318Z",
-        "lastAccessed": "2025-06-05T14:40:53.318Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     },
     {
         "key": "vpd",
-        "value": "v1%3B776x393x2.75",
+        "value": "v1%3B720x393x2.75",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-05T14:40:53.319Z",
-        "lastAccessed": "2025-06-05T14:40:53.319Z"
+        "creation": "2025-06-06T01:55:33.178Z",
+        "lastAccessed": "2025-06-06T01:55:33.178Z"
     }
 ]
